--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
       - uses: goto-bus-stop/setup-zig@v2
         with:
           version: 0.11.0
