init decoderawtx and update bitcoin core conf to include tx index

--- a/node/bitcoin.conf
+++ b/node/bitcoin.conf
@@ -24,6 +24,12 @@ rpcauth=walle:c3526fa826bf35f5801d28ecc69492ea$3b106999243493b74417cb358418d9632
 
 datadir=/bitcoin-25.0/data
 
+# [core]
+# Rebuild chain state and block index from the blk*.dat files on disk. WARNING: very slow!
+reindex=1
+# Maintain a full transaction index, used by the getrawtransaction rpc call.
+txindex=1
+
 # [Sections]
 # Most options automatically apply to mainnet, testnet, and regtest networks.
 # If you want to confine an option to just one network, you should add it in the relevant section.
