--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/clap"]
 	path = lib/clap
 	url = https://github.com/Hejsil/zig-clap
+[submodule "lib/zig-sqlite"]
+	path = lib/zig-sqlite
+	url = https://github.com/vrischmann/zig-sqlite.git
